--- a/Sinatra_Rake_File/Rakefile
+++ b/Sinatra_Rake_File/Rakefile
@@ -21,7 +21,7 @@ namespace :generate do
       raise "ERROR: Model file '#{model_path}' already exists"
     end
 
-    puts "Creating #{model_path}"
+    puts "\t\e[7m\e[32m>>\033[0m Creating #{model_path}"
     File.open(model_path, 'w+') do |f|
       f.write(<<-EOF.strip_heredoc)
         class #{model_name} < ActiveRecord::Base
@@ -46,16 +46,15 @@ namespace :generate do
     if File.exist?(path)
       raise "ERROR: File '#{path}' already exists"
     end
-    puts name
     table_name = name.underscore.match("create_").post_match
 
-    puts "Creating #{path}"
+    puts "\t\e[7m\e[32m>>\033[0m Creating #{path}"
     File.open(path, 'w+') do |f|
       f.write(<<-EOF.strip_heredoc)
         class #{name} < ActiveRecord::Migration
           def change
             create_table :#{table_name} do |t|
-
+            
               t.timestamps
             end
           end
@@ -64,7 +63,7 @@ namespace :generate do
     end
   end
 
-  desc "Create an empty folder in views"
+  desc "\t\e[7m\e[32m>>\033[0m Create an empty folder in views"
   task :controller do
     unless ENV.has_key?('NAME')
       raise "Must specificy controller name, e.g., rake generate:controller NAME=user"
@@ -78,7 +77,7 @@ namespace :generate do
       raise "ERROR: File '#{path}' already exists"
     end
 
-    puts "Creating #{path}"
+    puts "\t\e[7m\e[32m>>\033[0m Creating #{path}"
     File.open(path, 'w+') do |f|
       f.write(<<-EOF.strip_heredoc)
 
@@ -143,7 +142,7 @@ namespace :generate do
       raise "ERROR: File '#{path}' already exists"
     end
 
-    puts "Creating #{path}"
+    puts "\t\e[7m\e[32m>>\033[0m Creating #{path}"
     File.open(path, 'w+') do |f|
       f.write(<<-EOF.strip_heredoc)
         require 'spec_helper'
@@ -162,18 +161,19 @@ namespace :generate do
       raise "Must specificy model name, e.g., rake generate:scaffold NAME=user"
     end
 
-    puts "Scaffold activated"
+    puts "\t\e[7m\e[32m>>\033[0m Scaffold activated"
 
     name     = ENV['NAME'].downcase
     migration_name = "create_#{ENV['NAME'].downcase.pluralize}"
 
-    puts "Making all the stuff for the #{name} table...sit and relax"
+    puts "\t\e[7m\e[32m>>\033[0m Making all the stuff for the #{name} table...sit and relax"
 
     exec(<<-EOF.strip_heredoc
         mkdir app/views/#{name}_views
         touch app/views/#{name}_views/edit.erb
         touch app/views/#{name}_views/new.erb
         touch app/views/#{name.singularize}_views/show.erb
+        touch app/helpers/#{name}.rb
         bundle exec rake generate:model NAME=#{name}
         bundle exec rake generate:controller NAME=#{name.downcase}
         bundle exec rake generate:migration NAME=#{migration_name}
@@ -188,12 +188,12 @@ namespace :generate do
       raise "Must specificy a MVC to delete, e.g., rake generate:scaffold NAME=user"
     end
 
-    puts "Wildfire Deletion Activated"
+    puts "\t\e[43m\e[7m\e[31m>>\033[0m Wildfire Deletion Activated"
 
     name     = ENV['NAME'].downcase
     migration_name = "create_#{ENV['NAME'].downcase.pluralize}"
 
-    puts "Deleting all the stuff related to the #{name} table...watch it burn"
+    puts "\t\e[43m\e[7m\e[31m>>\033[0m Deleting all the stuff related to the #{name} table...watch it burn"
 
     files = Dir.entries( 'db/migrate' )
     delete = []
@@ -205,11 +205,14 @@ namespace :generate do
         rm app/views/#{name}_views/new.erb
         rm app/views/#{name}_views/show.erb
         rmdir app/views/#{name}_views
+        rm app/helpers/#{name}.rb
         rm db/migrate/#{delete[0]}
         rm app/models/#{name.downcase}.rb
         rm app/controllers/#{name.downcase.pluralize}.rb
       EOF
       )
+
+    puts "\t\e[43m\e[7m\e[31m>>\033[0m Task Accomplished"
 
   end
 end
@@ -219,13 +222,13 @@ namespace :db do
 
   desc "Create the database at #{DB_NAME}"
   task :create do
-    puts "Creating database #{DB_NAME} if it doesn't exist..."
+    puts "\t\e[41m\e[7m\e[34m>>\033[0m Creating database #{DB_NAME} if it doesn't exist..."
     exec("createdb #{DB_NAME}")
   end
 
   desc "Drop the database at #{DB_NAME}"
   task :drop do
-    puts "Dropping database #{DB_NAME}..."
+    puts "\t\e[43m\e[7m\e[31m>>\033[0m Dropping database #{DB_NAME}..."
     exec("dropdb #{DB_NAME}")
   end
 
@@ -238,7 +241,7 @@ namespace :db do
     end
   end
 
-  desc "Populate the database with dummy data by running db/seeds.rb"
+  desc "\t\e[41m\e[7m\e[34m>>\033[0m Populate the database with dummy data by running db/seeds.rb"
   task :seed do
     require APP_ROOT.join('db', 'seeds.rb')
   end
@@ -253,13 +256,13 @@ namespace :db do
 
   desc "reset the database"
   task :reset do
-    puts "resetting the frakking db"
+    puts "\t\e[43m\e[7m\e[31m>>\033[0m Resetting the frakking db"
     exec("bundle exec rake db:drop && bundle exec rake db:set")
   end
 
   desc "set the database"
   task :set do
-    puts "Create-Migrate-Seed...ALL AT ONCE"
+    puts "\t\e[41m\e[7m\e[34m>>\033[0m Create-Migrate-Seed...ALL AT ONCE"
     exec("bundle exec rake db:create && bundle exec rake db:migrate && bundle exec rake db:seed")
   end
 
@@ -271,98 +274,75 @@ namespace :db do
 
   desc "reset the db and opening the console"
   task :conreset do
-    puts "Reset to Console..."
+    puts "\t\e[5m\e[7m\e[31m>>\033[0mReset to Console..."
     exec("bundle exec rake db:reset && bundle exec rake console")
   end
 
 end
 
+desc 'Loading User-InterRake'
+task "u" do
+  puts "\n\t\e[7m Welcome to User-InterRake! \033[0m"
+  puts "\n\t\e[7m>>\033[0m\n\n"
+  exec("bundle exec rake launch")
+end
+
 desc 'Start User-InterRake'
 task "launch" do
-  puts "Starting User-InterRake"
   
+
   loop do
-    puts "==== User-InterRake ===="
-    puts "Type in a string of commands in order:"
-    puts "'q' -> quit"
-    puts "'b' -> bundle update"
-    puts "'s' -> scaffold"
-    puts "'i' -> initialize db (bundle update/create/migrate/seed) "
-    puts "'h' -> hard initialize (initialize to console)"
-    puts "'r' -> hard reset db (bundle update/drop/create/migrate/seed" 
-    puts "'c' -> exit to console"
-    puts "'x' -> hard reset then console"
-    puts "'g' -> git add and commit"
+    puts "\n\t\e[7m==== User-InterRake ====\033[0m\n\n"
+    puts "\tType in an order list for UIR to execute:"
+    puts "\n\t'q' \e[41m\e[7m->\033[0m quit"
+    puts "\t'b' \e[41m\e[7m\e[34m->\033[0m bundle"
+    puts "\t'u' \e[41m\e[7m\e[34m->\033[0m bundle update"    
+    puts "\t's' \e[7m\e[32m->\033[0m scaffold"
+    puts "\t'd' \e[43m\e[7m\e[31m->\033[0m delete by scaffold input"
+    puts "\t'i' \e[41m\e[7m\e[34m->\033[0m initialize db (bundle update/create/migrate/seed) "
+    puts "\t'r' \e[43m\e[7m\e[31m->\033[0m reset db (drop/create/migrate/seed" 
+    puts "\t'c' \e[45m\e[7m\e[37m->\033[0m exit to console"
+    puts "\t'g' \e[47m\e[7m\e[36m->\033[0m git add and commit"
+    puts "\t'l' \e[41m\e[7m->\033[0m restart UIR"
+    puts "\n\n"
     input = STDIN.gets.chomp
     
-    commands = ""
+    $commands = ""
     console = false
 
     input.split('').each do |letter|
       case letter
-      when "q" then break
+      when "l" 
+        exec("bundle exec rake launch")
+      when "q" 
+        exec("ECHO quitting")
       when "b"
-        puts "bundling"
-        commands << (<<-EOF
-          bundle
-          EOF
-          )      
+        bundle_command
+      when "u"
+        bundle_update_command
       when "i"
-        puts "Bundle through seeding"
-        commands << (<<-EOF
-          bundle exec rake db:set
-          EOF
-          )
+        initialize_command
       when "s"
-        puts "NAME= ?"
-        scaffold_input = STDIN.gets.chomp
-        commands << (<<-EOF
-          bundle exec rake generate:scaffold NAME=#{scaffold_input}
-          EOF
-          )
+        scaffold_command
       when "r"
-        commands << (<<-EOF
-          bundle exec rake db:reset
-          EOF
-          )
+        reset_command
       when "d"
-        puts "WARNING DELETING! BE CAREFUL THERE IS NO GOING BACK!"
-        puts "======================================================"
-        puts "NAME= ?"
-        puts "======================================================"
-        puts "SERIOUSLY THOUGH!!! DELETING! TYPE IN NAME=?"
-        puts "======================================================"
-        delete_input = STDIN.gets.chomp
-        commands << (<<-EOF
-          bundle exec rake generate:delete NAME=#{delete_input}
-          EOF
-          )
+        delete_command
       when "c"
-        puts "It's console time"
-        console = true
-        commands << (<<-EOF
-          bundle exec rake console
-          EOF
-          ) 
+        exit_to_console_command 
       when "g"
-        puts "Type your commit message"
-        message = STDIN.gets.chomp
-        commands << (<<-EOF
-          git add .
-          git commit -m "#{message}"
-          EOF
-          )    
+        git_add_commit_command
       end
     end
     
     unless console
-      commands << (<<-EOF
+      $commands << (<<-EOF
           bundle exec rake launch
           EOF
           )
     end
 
-    exec(commands)
+    exec($commands)
   end
 end
 
@@ -376,3 +356,94 @@ desc "Run the specs"
 RSpec::Core::RakeTask.new(:spec)
 
 task :default  => :specs
+
+
+# METHODS
+
+
+def back_check(input)
+    exec('bundle exec rake launch') if input == "q"
+  end
+
+  def bundle_command 
+    puts "\t\e[41m\e[7m\e[34m>>\033[0m bundling"
+    $commands << (<<-EOF
+      bundle
+      EOF
+      )  
+  end
+
+  def bundle_update_command
+    puts "\t\e[41m\e[7m\e[34m>>\033[0m bundle updating"
+    $commands << (<<-EOF
+      bundle update
+      EOF
+      )
+  end
+
+  def initialize_command
+  puts "\t\e[41m\e[7m\e[34m>>\033[0m Bundle through seeding"
+  $commands << (<<-EOF
+    bundle exec rake db:set
+    EOF
+    )  
+  end
+
+  def scaffold_command
+    puts "\t\e[7m\e[32m>>\033[0m AUTO CREATE: CONTROLLER/HELPER/VIEWS/MIGRATION/ "
+    puts "\t\e[7m\e[32m>>\033[0m INPUT 'q' to go back "
+    puts "\t\e[7m\e[32m>>\033[0m NAME= ? "
+    print "\t\e[7m\e[5m\e[32m>>\033[0m "
+
+    scaffold_input = STDIN.gets.chomp
+    back_check(scaffold_input)
+    $commands << (<<-EOF
+      bundle exec rake generate:scaffold NAME=#{scaffold_input}
+      EOF
+      )
+  end
+
+  def reset_command
+    puts "\t\e[43m\e[7m\e[31m>>\033[0m RESTING"
+    puts "\t\e[41m\e[7m\e[34m>>\033[0m CREATING"
+    $commands << (<<-EOF
+      bundle exec rake db:reset
+      EOF
+      )  
+  end
+  
+  def exit_to_console_command
+    puts "\e[45m\e[7m\e[37m>> \033[0m It's console time"
+    console = true
+    $commands << (<<-EOF
+      bundle exec rake console
+      EOF
+      )  
+  end
+
+  def delete_command
+    puts "\t\e[7m\e[43m\e[31m>>\033[0m WARNING \e[7m\e[43m\e[31mDELETING!\033[0m BE CAREFUL THERE IS NO GOING BACK!"
+    puts "\t\e[7m\e[43m\e[31m>>\033[0m =============== INPUT 'q' TO GO BACK ===============\033[0m"
+    puts "\t\e[7m\e[43m\e[31m>>\033[0m NAME= ?\033[0m"
+    print "\t\e[7m\e[43m\e[5m\e[31m>>\033[0m "
+    delete_input = STDIN.gets.chomp
+    back_check(delete_input)
+    $commands << (<<-EOF
+      bundle exec rake generate:delete NAME=#{delete_input}
+      EOF
+      )
+  end
+  
+  def git_add_commit_command
+    puts "\t\e[47m\e[7m\e[36m>> \033[0mType your commit message"
+    print "\t\e[47m\e[5m\e[7m\e[36m>> \033[0m"
+
+    message = STDIN.gets.chomp
+    back_check(message)
+
+    $commands << (<<-EOF
+      git add .
+      git commit -m "#{message}"
+      EOF
+      )    
+  end
