--- a/Sinatra_Rake_File/Rakefile
+++ b/Sinatra_Rake_File/Rakefile
@@ -21,6 +21,8 @@ namespace :generate do
       raise "ERROR: Model file '#{model_path}' already exists"
     end
 
+
+
     puts "\t\e[7m\e[32m>>\033[0m Creating #{model_path}"
     File.open(model_path, 'w+') do |f|
       f.write(<<-EOF.strip_heredoc)
@@ -48,13 +50,37 @@ namespace :generate do
     end
     table_name = name.underscore.match("create_").post_match
 
+        # puts "\t\e[7m\e[32m>>\033[0m Association Creation?"
+    # assoc = []
+
+    # loop do
+    #   puts "\t\e[7m\e[32m>>\033[0m Input 'row' of migration data... eg. 'has_many :users' 'q' to quit"
+    #   print "\t\e[7m\e[5m\e[32m>>\033[0m "
+    #   relation = STDIN.gets.chomp
+    #   break if relation == "q"
+    #   assoc << relation
+    # end
+
+    # puts "\t\e[7m\e[32m>>\033[0m Column Creation?"
+    # column = <<-EOF.strip_heredoc
+
+    # EOF
+
+    # loop do
+    #   puts "\t\e[7m\e[32m>>\033[0m Input 'row' of migration data... eg. 't.string :name' 'q' to quit"
+    #   print "\t\e[7m\e[5m\e[32m>>\033[0m "
+    #   attrib = STDIN.gets.chomp
+    #   break if attrib == "q"
+    #   column << attrib
+    # end
+
     puts "\t\e[7m\e[32m>>\033[0m Creating #{path}"
     File.open(path, 'w+') do |f|
       f.write(<<-EOF.strip_heredoc)
         class #{name} < ActiveRecord::Migration
           def change
             create_table :#{table_name} do |t|
-            
+
               t.timestamps
             end
           end
@@ -283,7 +309,7 @@ end
 desc 'Loading User-InterRake'
 task "u" do
   puts "\n\t\e[7m Welcome to User-InterRake! \033[0m"
-  puts "\n\t\e[7m>>\033[0m\n\n"
+  puts "\n\t\e[7m>>\033[0m \n\n"  
   exec("bundle exec rake launch")
 end
 
@@ -295,6 +321,8 @@ task "launch" do
     puts "\n\t\e[7m==== User-InterRake ====\033[0m\n\n"
     puts "\tType in an order list for UIR to execute:"
     puts "\n\t'q' \e[41m\e[7m->\033[0m quit"
+    puts "\t'l' \e[41m\e[7m->\033[0m restart UIR"
+    puts "\t'h' \e[41m\e[7m->\033[0m help menu"
     puts "\t'b' \e[41m\e[7m\e[34m->\033[0m bundle"
     puts "\t'u' \e[41m\e[7m\e[34m->\033[0m bundle update"    
     puts "\t's' \e[7m\e[32m->\033[0m scaffold"
@@ -302,8 +330,11 @@ task "launch" do
     puts "\t'i' \e[41m\e[7m\e[34m->\033[0m initialize db (bundle update/create/migrate/seed) "
     puts "\t'r' \e[43m\e[7m\e[31m->\033[0m reset db (drop/create/migrate/seed" 
     puts "\t'c' \e[45m\e[7m\e[37m->\033[0m exit to console"
-    puts "\t'g' \e[47m\e[7m\e[36m->\033[0m git add and commit"
-    puts "\t'l' \e[41m\e[7m->\033[0m restart UIR"
+    puts "\t'a' \e[47m\e[7m\e[36m->\033[0m git add and commit"
+    puts "\t'o' \e[47m\e[7m\e[36m->\033[0m git checkout"
+    puts "\t'ø' \e[47m\e[7m\e[36m->\033[0m git git checkout -b"
+    puts "\t'p' \e[47m\e[7m\e[36m->\033[0m git push origin"
+    puts "\t't' \e[47m\e[7m\e[36m->\033[0m git status"
     puts "\n\n"
     input = STDIN.gets.chomp
     
@@ -316,6 +347,8 @@ task "launch" do
         exec("bundle exec rake launch")
       when "q" 
         exec("ECHO quitting")
+      when "h"
+        help_menu
       when "b"
         bundle_command
       when "u"
@@ -332,6 +365,14 @@ task "launch" do
         exit_to_console_command 
       when "g"
         git_add_commit_command
+      when "o"
+        git_checkout_command
+      when "ø"
+        git_checkout_new_branch_command
+      when "p"
+        git_push_command
+      when "t"
+        git_status_command
       end
     end
     
@@ -362,88 +403,151 @@ task :default  => :specs
 
 
 def back_check(input)
-    exec('bundle exec rake launch') if input == "q"
-  end
+  exec('bundle exec rake launch') if input == "q"
+end
 
-  def bundle_command 
-    puts "\t\e[41m\e[7m\e[34m>>\033[0m bundling"
-    $commands << (<<-EOF
-      bundle
-      EOF
-      )  
-  end
+def help_menu
+  puts "\t\e[41m\e[7m>>\033[0m HELP! ¡AYUDAME!"
+  puts "\t\e[41m\e[7m>>\033[0m Colors: "
+  puts "\t\t\e[41m\e[7m>>\033[0m UIR"
+  puts "\t\t\e[41m\e[7m\e[34m>>\033[0m Positive Tables Commands (eg. Migrate/Seed Database"
+  puts "\t\t\e[7m\e[32m>>\033[0m Positive File Commands (eg. Create a Model)"
+  puts "\t\t\e[43m\e[7m\e[31m>>\033[0m Negative Table Commands/ rm Files (Drop/rm"
+  puts "\t\t\e[45m\e[7m\e[37m>>\033[0m Console Command (eg. rake console)"
+  puts "\t\t\e[47m\e[7m\e[36m>>\033[0m Git commands\n\n"
+  puts "\t\e[41m\e[7m>>\033[0m Press Any Key: "
+  print "\t\e[41m\e[5m\e[7m>>\033[0m "
+  STDIN.gets.chomp
+end
 
-  def bundle_update_command
-    puts "\t\e[41m\e[7m\e[34m>>\033[0m bundle updating"
-    $commands << (<<-EOF
-      bundle update
-      EOF
-      )
-  end
-
-  def initialize_command
-  puts "\t\e[41m\e[7m\e[34m>>\033[0m Bundle through seeding"
+def bundle_command 
+  puts "\t\e[41m\e[7m\e[34m>>\033[0m bundling"
   $commands << (<<-EOF
-    bundle exec rake db:set
+    bundle
     EOF
     )  
-  end
+end
 
-  def scaffold_command
-    puts "\t\e[7m\e[32m>>\033[0m AUTO CREATE: CONTROLLER/HELPER/VIEWS/MIGRATION/ "
-    puts "\t\e[7m\e[32m>>\033[0m INPUT 'q' to go back "
-    puts "\t\e[7m\e[32m>>\033[0m NAME= ? "
-    print "\t\e[7m\e[5m\e[32m>>\033[0m "
+def bundle_update_command
+  puts "\t\e[41m\e[7m\e[34m>>\033[0m bundle updating"
+  $commands << (<<-EOF
+    bundle update
+    EOF
+    )
+end
 
-    scaffold_input = STDIN.gets.chomp
-    back_check(scaffold_input)
-    $commands << (<<-EOF
-      bundle exec rake generate:scaffold NAME=#{scaffold_input}
-      EOF
-      )
-  end
+def initialize_command
+puts "\t\e[41m\e[7m\e[34m>>\033[0m Bundle through seeding"
+$commands << (<<-EOF
+  bundle exec rake db:set
+  EOF
+  )  
+end
 
-  def reset_command
-    puts "\t\e[43m\e[7m\e[31m>>\033[0m RESTING"
-    puts "\t\e[41m\e[7m\e[34m>>\033[0m CREATING"
-    $commands << (<<-EOF
-      bundle exec rake db:reset
-      EOF
-      )  
-  end
+def scaffold_command
+  puts "\t\e[7m\e[32m>>\033[0m AUTO CREATE: CONTROLLER/HELPER/VIEWS/MIGRATION/ "
+  puts "\t\e[7m\e[32m>>\033[0m INPUT 'q' to go back "
+  puts "\t\e[7m\e[32m>>\033[0m NAME= ? "
+  print "\t\e[7m\e[5m\e[32m>>\033[0m "
+
+  scaffold_input = STDIN.gets.chomp
+  back_check(scaffold_input)
+  $commands << (<<-EOF
+    bundle exec rake generate:scaffold NAME=#{scaffold_input}
+    EOF
+    )
+end
+
+def reset_command
+  puts "\t\e[43m\e[7m\e[31m>>\033[0m RESTING"
+  puts "\t\e[41m\e[7m\e[34m>>\033[0m CREATING"
+  $commands << (<<-EOF
+    bundle exec rake db:reset
+    EOF
+    )  
+end
+
+def exit_to_console_command
+  puts "\e[45m\e[7m\e[37m>> \033[0m It's console time"
+  console = true
+  $commands << (<<-EOF
+    bundle exec rake console
+    EOF
+    )  
+end
+
+def delete_command
+  puts "\t\e[7m\e[43m\e[31m>>\033[0m WARNING \e[7m\e[43m\e[31mDELETING!\033[0m BE CAREFUL THERE IS NO GOING BACK!"
+  puts "\t\e[7m\e[43m\e[31m>>\033[0m =============== INPUT 'q' TO GO BACK ===============\033[0m"
+  puts "\t\e[7m\e[43m\e[31m>>\033[0m NAME= ?\033[0m"
+  print "\t\e[7m\e[43m\e[5m\e[31m>>\033[0m "
+  delete_input = STDIN.gets.chomp
+  back_check(delete_input)
+  $commands << (<<-EOF
+    bundle exec rake generate:delete NAME=#{delete_input}
+    EOF
+    )
+end
+
+def git_add_commit_command
+  puts "\t\e[47m\e[7m\e[36m>>\033[0m Type your commit message"
+  print "\t\e[47m\e[5m\e[7m\e[36m>> \033[0m"
+
+  message = STDIN.gets.chomp
+  back_check(message)
+
+  $commands << (<<-EOF
+    git add .
+    git commit -m "#{message}"
+    EOF
+    )    
+end
+
+def git_checkout_command
+  puts "\t\e[47m\e[7m\e[36m>>\033[0mCheckout to what branch?"
+  print "\t\e[47m\e[5m\e[7m\e[36m>>\033[0m git checkout"
   
-  def exit_to_console_command
-    puts "\e[45m\e[7m\e[37m>> \033[0m It's console time"
-    console = true
-    $commands << (<<-EOF
-      bundle exec rake console
-      EOF
-      )  
-  end
+  branch = STDIN.gets.chomp
+  back_check(branch)
 
-  def delete_command
-    puts "\t\e[7m\e[43m\e[31m>>\033[0m WARNING \e[7m\e[43m\e[31mDELETING!\033[0m BE CAREFUL THERE IS NO GOING BACK!"
-    puts "\t\e[7m\e[43m\e[31m>>\033[0m =============== INPUT 'q' TO GO BACK ===============\033[0m"
-    puts "\t\e[7m\e[43m\e[31m>>\033[0m NAME= ?\033[0m"
-    print "\t\e[7m\e[43m\e[5m\e[31m>>\033[0m "
-    delete_input = STDIN.gets.chomp
-    back_check(delete_input)
-    $commands << (<<-EOF
-      bundle exec rake generate:delete NAME=#{delete_input}
-      EOF
-      )
-  end
+  $commands <<(<<-EOF
+    git checkout "#{branch}"
+    EOF
+    )  
+end
+
+def git_checkout_new_branch_command
+  puts "\t\e[47m\e[7m\e[36m>> \033[0mCheckout to what branch?"
+  print "\t\e[47m\e[5m\e[7m\e[36m>> \033[0m git checkout "
   
-  def git_add_commit_command
-    puts "\t\e[47m\e[7m\e[36m>> \033[0mType your commit message"
-    print "\t\e[47m\e[5m\e[7m\e[36m>> \033[0m"
+  branch = STDIN.gets.chomp
+  back_check(branch)
+  puts "\t\e[47m\e[7m\e[36m>>\033[0m Checking out branch #{branch}"
+  $commands <<(<<-EOF
+    git checkout -b "#{branch}"
+    EOF
+    )  
+end
 
-    message = STDIN.gets.chomp
-    back_check(message)
+def git_push_command 
+  puts "\t\e[47m\e[7m\e[36m>>\033[0m Push where?"
+  print "\t\e[47m\e[5m\e[7m\e[36m>>\033[0m git push origin "
+  
+  branch = STDIN.gets.chomp
+  back_check(branch)
+  puts "\t\e[47m\e[7m\e[36m>>\033[0m Checking out new branch, branch #{branch}"
+  $commands <<(<<-EOF
+    git checkout -b "#{branch}"
+    EOF
+    )  
+end
 
-    $commands << (<<-EOF
-      git add .
-      git commit -m "#{message}"
-      EOF
-      )    
-  end
+
+def git_status_command 
+  puts "\t\e[47m\e[7m\e[36m>>\033[0m Git Status:"
+
+  $commands <<(<<-EOF
+    git status
+    EOF
+    )  
+end
