--- a/Sinatra_Rake_File/Rakefile
+++ b/Sinatra_Rake_File/Rakefile
@@ -307,7 +307,7 @@ task "launch" do
     puts "\t'i' \e[41m\e[7m\e[34m->\033[0m initialize db (bundle update/create/migrate/seed) "
     puts "\t'r' \e[43m\e[7m\e[31m->\033[0m reset db (drop/create/migrate/seed" 
     puts "\t'c' \e[45m\e[7m\e[37m->\033[0m exit to console"
-    puts "\t'a' \e[47m\e[7m\e[36m->\033[0m git add and commit"
+    puts "\t'g' \e[47m\e[7m\e[36m->\033[0m git add and commit"
     puts "\t'o' \e[47m\e[7m\e[36m->\033[0m git checkout"
     puts "\t'y' \e[47m\e[7m\e[36m->\033[0m git git checkout -b"
     puts "\t'p' \e[47m\e[7m\e[36m->\033[0m git push origin"
@@ -346,7 +346,7 @@ task "launch" do
         git_add_commit_command
       when "o"
         git_checkout_command
-      when "ø"
+      when "y"
         git_checkout_new_branch_command
       when "p"
         git_push_command
@@ -404,7 +404,7 @@ def custom_command
   print "\t\e[41m\e[5m\e[7m>>\033[0m "
   input = STDIN.gets.chomp  
   back_check(input)
-  input = "echo skip" if input == "n"
+  input = "echo skipping" if input == "n"
   $commands << (<<-EOF
     #{input}
     EOF
