got yaml import working

--- a/dotfiles/aliases/chamberlain/config_files/devops_commands.yaml
+++ b/dotfiles/aliases/chamberlain/config_files/devops_commands.yaml
@@ -4,7 +4,7 @@
   :hop:
     :echo_description: sshing...
     :helper_descrpition: ssh -p(port, user, ip
-    :command: |-
-      echo ssh -p $1 $2@$3
-      echo ''
-      ssh -p $1 $2@$3;
+    :command: |
+        echo ssh -p $1 $2@$3
+          echo ''
+          ssh -p $1 $2@$3;
