--- a/dotfiles/aliases/chamberlain/config_files/rspec_commands.yaml
+++ b/dotfiles/aliases/chamberlain/config_files/rspec_commands.yaml
@@ -49,3 +49,19 @@
         echo "rspec spec/jobs/"
         rspec spec/jobs/;
       fi
+  :rtf:
+    :helper_descrpition: rspec test job (\$1) line (\$2)
+    :command: |-
+      if [ $# -gt 1 ]; then
+        echo testing line $2 in $1 feature
+        echo "rspec spec/features/$1_spec.rb:$2;"
+        rspec spec/features/$1_spec.rb:$2;
+      elif [ $# -gt 0 ]; then
+        echo testing all of $1 feature
+        echo "rspec spec/features/$1_spec.rb"
+        rspec spec/features/$1_spec.rb;
+      else
+        echo testing all features
+        echo "rspec spec/features/"
+        rspec spec/features/;
+      fi
