--- a/dotfiles/aliases/chamberlain/config_files/rspec_commands.yaml
+++ b/dotfiles/aliases/chamberlain/config_files/rspec_commands.yaml
@@ -49,6 +49,22 @@
         echo "rspec spec/jobs/"
         rspec spec/jobs/;
       fi
+  :rth:
+    :helper_descrpition: rspec test helper (\$1) line (\$2)
+    :command: |-
+      if [ $# -gt 1 ]; then
+        echo testing line $2 in $1 helper
+        echo "rspec spec/helpers/$1_helper_spec.rb:$2;"
+        rspec spec/helpers/$1_helper_spec.rb:$2;
+      elif [ $# -gt 0 ]; then
+        echo testing all of $1 helper
+        echo "rspec spec/helpers/$1_helper_spec.rb"
+        rspec spec/helpers/$1_helper_spec.rb;
+      else
+        echo testing all helpers
+        echo "rspec spec/helpers/"
+        rspec spec/helpers/;
+      fi
   :rtf:
     :helper_descrpition: rspec test job (\$1) line (\$2)
     :command: |-
