--- a/dotfiles/aliases/chamberlain/config_files/rspec_commands.yaml
+++ b/dotfiles/aliases/chamberlain/config_files/rspec_commands.yaml
@@ -66,7 +66,7 @@
         rspec spec/helpers/;
       fi
   :rtf:
-    :helper_descrpition: rspec test job (\$1) line (\$2)
+    :helper_descrpition: rspec test feature (\$1) line (\$2)
     :command: |-
       if [ $# -gt 1 ]; then
         echo testing line $2 in $1 feature
@@ -80,4 +80,20 @@
         echo testing all features
         echo "rspec spec/features/"
         rspec spec/features/;
+      fi
+  :rt2:
+    :helper_descrpition: rspec test worker (\$1) line (\$2)
+    :command: |-
+      if [ $# -gt 1 ]; then
+        echo testing line $2 in $1 worker
+        echo "rspec spec/workers/$1_worker_spec.rb:$2;"
+        rspec spec/workers/$1_worker_spec.rb:$2;
+      elif [ $# -gt 0 ]; then
+        echo testing all of $1 worker
+        echo "rspec spec/workers/$1_worker_spec.rb"
+        rspec spec/workers/$1_worker_spec.rb;
+      else
+        echo testing all workers
+        echo "rspec spec/workers/"
+        rspec spec/workers/;
       fi
