--- a/dotfiles/aliases/chamberlain/config_files/git_commands.yaml
+++ b/dotfiles/aliases/chamberlain/config_files/git_commands.yaml
@@ -33,3 +33,17 @@
       echo ""
       git pull origin $BRANCH
       echo ""
+  :gph:
+    :echo_description: git push origin HEAD
+    :helper_descrpition: git push origin current branch (blocks master)
+    :command: |-
+      BRANCH=$(git symbolic-ref HEAD)
+      MASTER="refs/heads/master"
+      echo "Trying to Push Branch"
+      echo "Checking if on master..."
+      if  [[ "$BRANCH" == "$MASTER" ]]; then
+        echo 'YOU ARE ON MASTER BRACNH!'
+      else
+        echo "Passed check"
+        git push origin HEAD
+      fi
