--- a/dotfiles/aliases/chamberlain/config_files/rails_commands.yaml
+++ b/dotfiles/aliases/chamberlain/config_files/rails_commands.yaml
@@ -10,6 +10,8 @@
   :frakit: echo Resetting the Fraking db; echo dropping db; rake db:drop; echo creating
     db; rake db:create; echo migrating db; rake db:migrate; echo seeding db; rake
     db:seed
+  :clearpgpid: rm /usr/local/var/postgres/postmaster.pid
+  "clearserverpid: rm tmp/pids/server.pid
 :custom_functions:
   :rr:
     :helper_descrpition: rake route (| grep \$1)
