--- a/dotfiles/aliases/chamberlain/config_files/url_commands.yaml
+++ b/dotfiles/aliases/chamberlain/config_files/url_commands.yaml
@@ -20,4 +20,4 @@
       URL=$(awk '{gsub(/git@/,"https://www.")}1' <<< $URL)
       URL=$(awk '{gsub(/.git$/,"")}1' <<< $URL)
       BRANCH=$(git rev-parse --abbrev-ref HEAD)
-      open ${URL}/compare/${BRANCH}?expand=1
+      open "${URL}/compare/${BRANCH}?expand=1"
